# Zeitgeist

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json  zeitgeist_spec.md
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/core/: exceptions.py  logging.py  prompts.py  security.py
app/models/: domain.py  request.py  response.py
app/services/: cache_service.py  openai_service.py  polygon_service.py  predictor.py
app/utils/: formatters.py  metrics.py  validators.py
deployment/: fly.toml  render.yaml
docker/: Dockerfile.dev
docs/context/: project.md
scripts/: setup_local.sh  test_apis.py
tests/: conftest.py
tests/e2e/: test_predictions.py
tests/unit/: test_services.py  test_utils.py
zeitgeist-app/: next.config.ts  package-lock.json  package.json  plan.md  tailwind.config.ts  tsconfig.json
zeitgeist-app/src/: middleware.ts
zeitgeist-app/src/app/: globals.css  layout.tsx  page.tsx
zeitgeist-app/src/components/: analysis-display.tsx  analysis-unavailable.tsx  dotted-glow-background-demo.tsx  error-display.tsx  navigation.tsx  shooting-stars-background-demo.tsx  shooting-stars-demo.tsx  stock-analysis-container.tsx  stock-chart.tsx  stock-input.tsx  stock-loading.tsx  stock-price-display.tsx
zeitgeist-app/src/lib/: anthropic.ts  api-errors.ts  cfo-prompt.ts  openai.ts  polygon.ts  stock-utils.ts
zeitgeist-app/src/types/: cfo.ts  stock.ts
zeitgeist-app/supabase/: schema.sql
(+31 files in other folders)
